--- a/backend/widgets/build.gradle
+++ b/backend/widgets/build.gradle
@@ -16,8 +16,17 @@
 
 import br.com.zup.beagle.Dependencies
 
+test {
+    useJUnitPlatform()
+}
+
 dependencies {
     api project(Dependencies.Modules.schemaKotlinCore)
+
+    testImplementation Dependencies.TestLibraries.mockk
+    testImplementation Dependencies.TestLibraries.kotlinTest
+    testImplementation Dependencies.TestLibraries.junit5Api
+    testRuntimeOnly Dependencies.TestLibraries.junit5Engine
 }
 
 apply from: rootProject.file('../maven-publish.gradle')
