feat: add new Layout Widgets: Center, Column and Row. (#1457)
* test components

* feat: improve api to write flex and style

* adjust code

* remove components

* add new components

* create extension to unit value

* adjust backend code and create sized box component

* add new function in style

* adjust operation

* create static function in bind

* improve accessbility

* create helper to platform

* apply var to corner radius

* adjust code

* add simple documentation

* adjust documentation

* adjust code

* create unit test

* create unit test

* adjust code

* create unit test

* adjust test and components

* adjust expanded

* fix: PageView retain cycle (#1434)

* Fix PageView retain cycle

* PageView retain cycle test

* chore: adjust error in horusec (#1441)

* chore: ignore error in appium test

* adjust

* adjust

* fix page layout of listView tests (#1423)

* feat: Improve iOS test script setup step (#1429)

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* Update automated_tests_appium_ios.yml

update

* Update backend/framework/src/main/kotlin/br/com/zup/beagle/platform/BeaglePlatform.kt

Co-authored-by: igorgiumellizup <73198010+igorgiumellizup@users.noreply.github.com>

* Update backend/kotlin-core/src/main/kotlin/br/com/zup/beagle/ext/FlexExtension.kt

Co-authored-by: igorgiumellizup <73198010+igorgiumellizup@users.noreply.github.com>

* Update backend/kotlin-core/src/main/kotlin/br/com/zup/beagle/ext/FlexExtension.kt

Co-authored-by: igorgiumellizup <73198010+igorgiumellizup@users.noreply.github.com>

* Update backend/kotlin-core/src/main/kotlin/br/com/zup/beagle/ext/FlexExtension.kt

Co-authored-by: igorgiumellizup <73198010+igorgiumellizup@users.noreply.github.com>

* Update backend/kotlin-core/src/main/kotlin/br/com/z

--- a/backend/kotlin-core/build.gradle
+++ b/backend/kotlin-core/build.gradle
@@ -14,4 +14,18 @@
  * limitations under the License.
  */
 
+import br.com.zup.beagle.Dependencies
+
 apply from: rootProject.file('../maven-publish.gradle')
+
+test {
+    useJUnitPlatform()
+}
+
+dependencies {
+    testImplementation Dependencies.TestLibraries.mockk
+    testImplementation Dependencies.TestLibraries.kotlinTest
+    testImplementation Dependencies.TestLibraries.junit5Api
+    testRuntimeOnly Dependencies.TestLibraries.junit5Engine
+}
+
