--- a/.github/workflows/automated_tests_appium_mobile.yml
+++ b/.github/workflows/automated_tests_appium_mobile.yml
@@ -20,7 +20,7 @@ on: workflow_dispatch
 jobs:
   appium_tests:
     name: Trigger job
-    runs-on: macos-latest
+    runs-on: macos-10.15
     steps:
       - name: Start mobile tests
         run: echo "Triggering Appium Android / iOS tests"
