--- a/.github/workflows/automated_tests_ios.yml
+++ b/.github/workflows/automated_tests_ios.yml
@@ -5,7 +5,7 @@ on: workflow_dispatch
 jobs:
     run-automated-tests:
         name: Run automated tests
-        runs-on: macos-latest
+        runs-on: macos-10.15
         steps:
             -   uses: actions/checkout@v2
 
