--- a/.github/workflows/backend-pr.yml
+++ b/.github/workflows/backend-pr.yml
@@ -18,7 +18,7 @@ on:
 jobs:
     pr-verification:
         name: PR Check
-        runs-on: macos-latest
+        runs-on: macos-10.15
         steps:
             -   uses: actions/checkout@v2
 
