--- a/.github/workflows/flutter-pr.yml
+++ b/.github/workflows/flutter-pr.yml
@@ -13,7 +13,7 @@ on:
 jobs:
     pr-verification:
         name: PR Check
-        runs-on: macos-latest
+        runs-on: macos-10.15
         steps:
             -   uses: actions/checkout@v2
             -   uses: subosito/flutter-action@v1
