--- a/.github/workflows/ios-pr.yml
+++ b/.github/workflows/ios-pr.yml
@@ -14,7 +14,7 @@ on:
 jobs:
     pr_verification:
         name: PR Check
-        runs-on: macos-latest
+        runs-on: macos-10.15
 
         steps:
             -   name: Checkout repo
