--- a/.github/workflows/pr_danger.yml
+++ b/.github/workflows/pr_danger.yml
@@ -8,7 +8,7 @@ on:
 jobs:
     danger-pr:
         name: Danger PR
-        runs-on: macos-latest
+        runs-on: macos-10.15
         steps:
             -   uses: actions/checkout@v2
 
