add branch on trigger params to test it!
Signed-off-by: luismaximozup <luis.maximo@zup.com.br>

--- a/.github/workflows/release-kdocs.yml
+++ b/.github/workflows/release-kdocs.yml
@@ -2,7 +2,7 @@ name: Beagle kdocs publish
 
 on:
     push:
-        branches: [master]
+        branches: [master, fix/dokka-workflow]
         tags-ignore:
             - "*-iOS"
         tags:
