--- a/.github/workflows/release-kdocs.yml
+++ b/.github/workflows/release-kdocs.yml
@@ -41,9 +41,9 @@ jobs:
                 aws-region: sa-east-1
 
             - name: S3 upload
-              if: ${{ contains(github.ref, 'tags') }}
+              if: contains(github.ref, 'tags')
               run: aws s3 sync --acl public-read --follow-symlinks fastlane/kdocs/public s3://${{ secrets.AWS_DOCS_S3_BUCKET }}/ --delete
 
             - name: S3 BETA upload
-              if: ${{ contains(github.ref, 'heads/master' }}
+              if: ${{ github.ref == 'refs/heads/fix/dokka-workflow' }}
               run: aws s3 sync --acl public-read --follow-symlinks fastlane/kdocs/public s3://${{ secrets.AWS_DOCS_BETA_BUCKET }}/ --delete
