set workflow dispatch
Signed-off-by: luismaximozup <luis.maximo@zup.com.br>

--- a/.github/workflows/release-kdocs.yml
+++ b/.github/workflows/release-kdocs.yml
@@ -1,9 +1,7 @@
 name: Beagle kdocs publish
 
-on:
-    push:
-        tags:
-            - '*'
+on: workflow_dispatch
+
 jobs:
     publish:
         name: Publish kdocs to aws S3
