set workflow dispatch
Signed-off-by: luismaximozup <luis.maximo@zup.com.br>

--- a/.github/workflows/release-kdocs.yml
+++ b/.github/workflows/release-kdocs.yml
@@ -1,7 +1,9 @@
 name: Beagle kdocs publish
 
-on: workflow_dispatch
-
+on:
+    push:
+        tags:
+            - '*'
 jobs:
     publish:
         name: Publish kdocs to aws S3
