--- a/.github/workflows/release-kdocs.yml
+++ b/.github/workflows/release-kdocs.yml
@@ -12,6 +12,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: '8'
+
       - name: Cache gradle dependencies
         uses: actions/cache@v2
         env:
