--- a/.github/workflows/release-kdocs.yml
+++ b/.github/workflows/release-kdocs.yml
@@ -12,7 +12,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: actions/setup-java@v2
+      - name: Setup JDK (8)
+        uses: actions/setup-java@v2
         with:
           distribution: 'adopt'
           java-version: '8'
