--- a/.github/workflows/publish_test_backend.yml
+++ b/.github/workflows/publish_test_backend.yml
@@ -18,11 +18,21 @@ jobs:
                     path: ${{ env.gradle-path }}
                     key: ${{ runner.os }}-build-${{ env.gradle-cache-key }}-${{ hashFiles('backend/buildSrc/**') }}
                     restore-keys: ${{ runner.os }}-build-${{ env.gradle-cache-key }}
+            -   name: Read secrets from AWS Secrets Manager into environment variables
+                uses: abhilash1in/aws-secrets-manager-action@v1.0.1
+                with:
+                    aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                    aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                    aws-region: us-east-1
+                    secrets: |
+                        beagle/core/*
+                        beagle/docs/aws
+                    parse-json: true
             -   name: Create backend image and publish it
                 run: bash fastlane/automatedTests/publish_test_backend.sh
                 env:
                     user: ${{ github.actor }}
-                    token: ${{ secrets.GITHUB_TOKEN }}
+                    token: ${{ env.BEAGLE_CORE_GITHUB_GITHUB_TOKEN }}
                     repository: ${{ github.repository }}
                     registry: docker.pkg.github.com
                     image: automated-test-backend
