:lipstick: Improves secrets manager reading

--- a/.github/workflows/android-pr.yml
+++ b/.github/workflows/android-pr.yml
@@ -21,7 +21,7 @@ jobs:
         runs-on: macos-latest
         steps:
             -   uses: actions/checkout@v2
-
+            -   uses: ./.github/actions/secrets
             # Gems for Fastlane
             -   name: Cache ruby gems dependencies
                 uses: actions/cache@v2
@@ -43,15 +43,6 @@ jobs:
                     path: ${{ env.gradle-path }}
                     key: ${{ runner.os }}-build-${{ env.gradle-cache-key }}-${{ hashFiles('android/buildSrc/**') }}
                     restore-keys: ${{ runner.os }}-build-${{ env.gradle-cache-key }}
-            -   name: Read secrets from AWS Secrets Manager into environment variables
-                uses: abhilash1in/aws-secrets-manager-action@v1.0.1
-                with:
-                    aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-                    aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                    aws-region: us-east-1
-                    secrets: |
-                        beagle/core/*
-                    parse-json: true
             -   name: Run pr check
                 env:
                     GITHUB_USER: ${{ env.BEAGLE_CORE_GITHUB_GITHUB_USER }}
