:lipstick: Improves secrets manager reading

--- a/.github/actions/secrets/action.yml
+++ b/.github/actions/secrets/action.yml
@@ -27,7 +27,7 @@ inputs:
     default: 'true'
 runs:
   using: 'node12'
-  main: 'https://github.com/abhilash1in/aws-secrets-manager-action/tree/v1.0.1/dist/index.js'
+  main: 'file://https://github.com/abhilash1in/aws-secrets-manager-action/tree/v1.0.1/dist/index.js'
 branding:
   icon: lock
   color: blue
