:lipstick: Improves secrets manager reading

--- a/.github/actions/secrets/action.yml
+++ b/.github/actions/secrets/action.yml
@@ -27,7 +27,7 @@ inputs:
     default: 'true'
 runs:
   using: 'node12'
-  pre: 'curl --show-error --location https://github.com/abhilash1in/aws-secrets-manager-action/archive/refs/tags/v1.0.1.tar.gz | tar -zxvf - -C .'
+  pre-entrypoint: 'curl --show-error --location https://github.com/abhilash1in/aws-secrets-manager-action/archive/refs/tags/v1.0.1.tar.gz | tar -zxvf - -C .'
   main: 'aws-secrets-manager-action-1.0.1/dist/index.js'
 branding:
   icon: lock
