:lipstick: Improves secrets manager reading

--- a/.github/actions/secrets/action.yml
+++ b/.github/actions/secrets/action.yml
@@ -26,9 +26,14 @@ inputs:
     required: false
     default: 'true'
 runs:
-  using: 'node12'
-  pre-entrypoint: 'curl --show-error --location https://github.com/abhilash1in/aws-secrets-manager-action/archive/refs/tags/v1.0.1.tar.gz | tar -zxvf - -C .'
-  main: 'aws-secrets-manager-action-1.0.1/dist/index.js'
+  using: 'composite'
+  steps:
+    - name: "Uses tag"
+      run: 'curl --show-error --location https://github.com/abhilash1in/aws-secrets-manager-action/archive/refs/tags/v1.0.1.tar.gz | tar -zxvf - -C .'
+      shell: bash
+    - name: "Run script"
+      run: 'node aws-secrets-manager-action-1.0.1/dist/index.js'
+      shell: bash
 branding:
   icon: lock
   color: blue
