:lipstick: Improves secrets manager reading

--- a/.github/actions/secrets/action.yml
+++ b/.github/actions/secrets/action.yml
@@ -28,11 +28,20 @@ inputs:
 runs:
   using: 'composite'
   steps:
-    - name: "Uses tag"
-      run: 'curl --show-error --location https://github.com/abhilash1in/aws-secrets-manager-action/archive/refs/tags/v1.0.1.tar.gz | tar -zxvf - -C .'
+    - run: 'curl --show-error --location https://github.com/abhilash1in/aws-secrets-manager-action/archive/refs/tags/v1.0.1.tar.gz | tar -zxvf - -C .'
       shell: bash
-    - name: "Run script"
-      run: 'node aws-secrets-manager-action-1.0.1/dist/index.js'
+    - run: export INPUT_SECRETS=${{ inputs.secrets }}
+      shell: bash
+    - run: export INPUT_AWS-ACCESS-KEY-ID=${{ inputs.aws-access-key-id }}
+      shell: bash
+    - run: export INPUT_AWS-SECRET-ACCESS-KEY=${{ inputs.aws-secret-access-key }}
+      shell: bash
+    - run: export INPUT_PARSE-JSON=${{ inputs.parse-json }}
+      shell: bash
+    - run: export INPUT_AWS-REGION=${{ inputs.aws-region }}
+      shell: bash
+
+    - run: 'node aws-secrets-manager-action-1.0.1/dist/index.js'
       shell: bash
 branding:
   icon: lock
