:lipstick: Improves secrets manager reading

--- a/.github/actions/secrets/action.yml
+++ b/.github/actions/secrets/action.yml
@@ -18,9 +18,7 @@ inputs:
   secrets:
     description: 'List of secret names you want to fetch secret values for'
     required: false
-    default: |
-        beagle/core/*
-        beagle/docs/aws
+    default: beagle/core/*
   parse-json:
     description: 'If true and secret values are stringified JSON objects, they will be parsed and flattened. Its key value pairs will become individual secrets'
     required: false
