:lipstick: Improves secrets manager reading

--- a/.github/actions/secrets/action.yml
+++ b/.github/actions/secrets/action.yml
@@ -30,7 +30,7 @@ runs:
       shell: bash
     - run: export INPUT_SECRETS=${{ inputs.secrets }}
       shell: bash
-    - run: export INPUT_AWS_ACCESS_KEY_ID=${{ inputs.aws-access-key-id }}
+    - run: export INPUT_AWS_ACCESS_KEY_ID=testekey
       shell: bash
     - run: export INPUT_AWS_SECRET_ACCESS_KEY=${{ inputs.aws-secret-access-key }}
       shell: bash
