:lipstick: Improves secrets manager reading

--- a/.github/actions/secrets/action.yml
+++ b/.github/actions/secrets/action.yml
@@ -30,13 +30,13 @@ runs:
       shell: bash
     - run: export INPUT_SECRETS=${{ inputs.secrets }}
       shell: bash
-    - run: export INPUT_AWS_ACCESS_KEY_ID=testekey
+    - run: export INPUT_AWS_ACCESS_KEY_ID=${{ inputs.aws-access-key-id }}
       shell: bash
     - run: export INPUT_AWS_SECRET_ACCESS_KEY=${{ inputs.aws-secret-access-key }}
       shell: bash
     - run: export INPUT_PARSE_JSON=${{ inputs.parse-json }}
       shell: bash
-    - run: export INPUT_AWS_REGION=${{ inputs.aws-region }}
+    - run: export INPUT_AWS_REGION=dsadasdasdas
       shell: bash
     - run: 'node aws-secrets-manager-action-1.0.1/dist/index.js'
       shell: bash
