:lipstick: Improves secrets manager reading

--- a/.github/actions/secrets/action.yml
+++ b/.github/actions/secrets/action.yml
@@ -36,7 +36,9 @@ runs:
       shell: bash
     - run: export INPUT_PARSE_JSON=${{ inputs.parse-json }}
       shell: bash
-    - run: export INPUT_AWS_REGION=dsadasdasdas
+    - run: export INPUT_AWS_REGION=${{ inputs.aws-region }}
+      shell: bash
+    - run: printenv
       shell: bash
     - run: 'node aws-secrets-manager-action-1.0.1/dist/index.js'
       shell: bash
