:lipstick: Improves secrets manager reading

--- a/.github/actions/secrets/action.yml
+++ b/.github/actions/secrets/action.yml
@@ -42,6 +42,8 @@ runs:
       shell: bash
     - run: 'node aws-secrets-manager-action-1.0.1/dist/index.js'
       shell: bash
+    - run: printenv
+      shell: bash
 branding:
   icon: lock
   color: blue
