:lipstick: Improves secrets manager reading

--- a/.github/actions/secrets/action.yml
+++ b/.github/actions/secrets/action.yml
@@ -28,19 +28,14 @@ runs:
   steps:
     - run: 'curl --show-error --location https://github.com/abhilash1in/aws-secrets-manager-action/archive/refs/tags/v1.0.1.tar.gz | tar -zxvf - -C .'
       shell: bash
-    - run: export INPUT_SECRETS=${{ inputs.secrets }}
-      shell: bash
-    - run: export INPUT_AWS_ACCESS_KEY_ID=${{ inputs.aws-access-key-id }}
-      shell: bash
-    - run: export INPUT_AWS_SECRET_ACCESS_KEY=${{ inputs.aws-secret-access-key }}
-      shell: bash
-    - run: export INPUT_PARSE_JSON=${{ inputs.parse-json }}
-      shell: bash
-    - run: export INPUT_AWS_REGION=${{ inputs.aws-region }}
-      shell: bash
-    - run: printenv
-      shell: bash
-    - run: 'node aws-secrets-manager-action-1.0.1/dist/index.js'
+    - name: Run Action secrets
+      env:
+          INPUT_SECRETS: ${{ inputs.secrets }}
+          INPUT_AWS_ACCESS_KEY_ID: ${{ inputs.aws-access-key-id }}
+          INPUT_AWS_SECRET_ACCESS_KEY: ${{ inputs.aws-secret-access-key }}
+          INPUT_PARSE_JSON: ${{ inputs.parse-json }}
+          INPUT_AWS_REGION: ${{ inputs.aws-region }}
+      run: 'node aws-secrets-manager-action-1.0.1/dist/index.js'
       shell: bash
     - run: printenv
       shell: bash
