:lipstick: Improves secrets manager reading

--- a/.github/actions/secrets/action.yml
+++ b/.github/actions/secrets/action.yml
@@ -28,6 +28,8 @@ runs:
   steps:
     - run: 'curl --show-error --location https://github.com/abhilash1in/aws-secrets-manager-action/archive/refs/tags/v1.0.1.tar.gz | tar -zxvf - -C .'
       shell: bash
+    - run: printenv
+      shell: bash
     - name: Run Action secrets
       env:
           INPUT_SECRETS: ${{ inputs.secrets }}
