:lipstick: Improves secrets manager reading

--- a/.github/actions/secrets/action.yml
+++ b/.github/actions/secrets/action.yml
@@ -28,7 +28,10 @@ runs:
   steps:
     - run: 'curl --show-error --location https://github.com/abhilash1in/aws-secrets-manager-action/archive/refs/tags/v1.0.1.tar.gz | tar -zxvf - -C .'
       shell: bash
-    - run: printenv
+    -name: Print Region
+      env:
+      INPUT_AWS_REGION: ${{ inputs.aws-region }}
+      run: "echo  INPUT_AWS_REGION=$INPUT_AWS_REGION"
       shell: bash
     - name: Run Action secrets
       env:
@@ -38,8 +41,6 @@ runs:
           INPUT_PARSE_JSON: ${{ inputs.parse-json }}
           INPUT_AWS_REGION: ${{ inputs.aws-region }}
       run: 'node aws-secrets-manager-action-1.0.1/dist/index.js'
-      shell: bash
-    - run: printenv
       shell: bash
 branding:
   icon: lock
