:lipstick: Improves secrets manager reading

--- a/.github/actions/secrets/action.yml
+++ b/.github/actions/secrets/action.yml
@@ -40,6 +40,11 @@ runs:
           INPUT_AWS_SECRET_ACCESS_KEY: ${{ inputs.aws-secret-access-key }}
           INPUT_PARSE_JSON: ${{ inputs.parse-json }}
           INPUT_AWS_REGION: ${{ inputs.aws-region }}
+          SECRETS: ${{ inputs.secrets }}
+          AWS_ACCESS_KEY_ID: ${{ inputs.aws-access-key-id }}
+          AWS_SECRET_ACCESS_KEY: ${{ inputs.aws-secret-access-key }}
+          PARSE_JSON: ${{ inputs.parse-json }}
+          AWS_REGION: ${{ inputs.aws-region }}
       run: 'node aws-secrets-manager-action-1.0.1/dist/index.js'
       shell: bash
 branding:
