:lipstick: Improves secrets manager reading

--- a/.github/actions/secrets/action.yml
+++ b/.github/actions/secrets/action.yml
@@ -18,7 +18,9 @@ inputs:
   secrets:
     description: 'List of secret names you want to fetch secret values for'
     required: false
-    default: beagle/core/*
+    default: |
+      beagle/core/*
+      beagle/docs/aws
   parse-json:
     description: 'If true and secret values are stringified JSON objects, they will be parsed and flattened. Its key value pairs will become individual secrets'
     required: false
@@ -30,8 +32,8 @@ runs:
       shell: bash
     - name: Print Region
       env:
-        INPUT_AWS_REGION: ${{ inputs.aws-region }}
-      run: "echo  INPUT_AWS_REGION=$INPUT_AWS_REGION"
+        INPUT_SECRETS: ${{ inputs.secrets }}
+      run: "echo  INPUT_SECRETS=$INPUT_SECRETS"
       shell: bash
     - name: Run Action secrets
       env:
