:lipstick: Improves secrets manager reading

--- a/.github/actions/secrets/action.yml
+++ b/.github/actions/secrets/action.yml
@@ -26,29 +26,9 @@ inputs:
     required: false
     default: 'true'
 runs:
-  using: 'composite'
-  steps:
-    - run: 'curl --show-error --location https://github.com/abhilash1in/aws-secrets-manager-action/archive/refs/tags/v1.0.1.tar.gz | tar -zxvf - -C .'
-      shell: bash
-    - name: Print Region
-      env:
-        INPUT_SECRETS: ${{ inputs.secrets }}
-      run: "echo  INPUT_SECRETS=$INPUT_SECRETS"
-      shell: bash
-    - name: Run Action secrets
-      env:
-          INPUT_SECRETS: ${{ inputs.secrets }}
-          INPUT_AWS_ACCESS_KEY_ID: ${{ inputs.aws-access-key-id }}
-          INPUT_AWS_SECRET_ACCESS_KEY: ${{ inputs.aws-secret-access-key }}
-          INPUT_PARSE_JSON: ${{ inputs.parse-json }}
-          INPUT_AWS_REGION: ${{ inputs.aws-region }}
-          SECRETS: ${{ inputs.secrets }}
-          AWS_ACCESS_KEY_ID: ${{ inputs.aws-access-key-id }}
-          AWS_SECRET_ACCESS_KEY: ${{ inputs.aws-secret-access-key }}
-          PARSE_JSON: ${{ inputs.parse-json }}
-          AWS_REGION: ${{ inputs.aws-region }}
-      run: 'node aws-secrets-manager-action-1.0.1/dist/index.js'
-      shell: bash
+  pre: 'aws-secrets-manager-action-1.0.1/dist/index.js'
+  using: 'node12'
+  main: 'aws-secrets-manager-action-1.0.1/dist/index.js'
 branding:
   icon: lock
   color: blue
