:lipstick: Improves secrets manager reading

--- a/.github/actions/secrets/action.yml
+++ b/.github/actions/secrets/action.yml
@@ -27,7 +27,7 @@ inputs:
     default: 'true'
 runs:
   using: 'node12'
-  main: '../configure-secrets/aws-secrets-manager-action-1.0.1/dist/index.js'
+  main: './.github/actions/secrets/configure-secrets/aws-secrets-manager-action-1.0.1/dist/index.js'
 branding:
   icon: lock
   color: blue
