--- a/.github/actions/configure-secrets/action.yml
+++ b/.github/actions/configure-secrets/action.yml
@@ -5,3 +5,5 @@ runs:
   steps:
     - run: 'curl --show-error --location https://github.com/abhilash1in/aws-secrets-manager-action/archive/refs/tags/v1.0.1.tar.gz | tar -zxvf - -C .'
       shell: bash
+    - run: 'pwd'
+      shell: bash
