feat: first commit
Signed-off-by: Matheus Ribeiro <matheus.ribeiro@zup.com.br>

--- a/flutter/beagle_components/pubspec.yaml
+++ b/flutter/beagle_components/pubspec.yaml
@@ -4,6 +4,7 @@ description: Beagle Components is a set of tools and components to be used with 
 version: 1.0.0
 author: Zup
 homepage: https://usebeagle.io/
+publish_to: none
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
