--- a/flutter/beagle/pubspec.yaml
+++ b/flutter/beagle/pubspec.yaml
@@ -3,6 +3,7 @@ description: Beagle is an open source framework for cross-platform development u
 version: 1.0.0
 author: Zup
 homepage: https://usebeagle.io/
+publish_to: none
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -12,15 +13,17 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_js: 0.2.2+0
-  get_it: ^5.0.6
+  get_it: ^6.0.0
   shared_preferences: 0.5.12+4
   url_launcher: ^5.7.10
+  yoga_engine:
+    path: ../../../yoga_engine
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mockito: 4.1.3
   pedantic: ^1.9.0
+  mockito: 4.1.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
