--- a/android/processor-shared-code/build.gradle
+++ b/android/processor-shared-code/build.gradle
@@ -19,6 +19,9 @@ import br.com.zup.beagle.Dependencies
 apply plugin: 'kotlin'
 apply from: "./../../jacoco.gradle"
 
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
+
 dependencies {
     implementation Dependencies.GeneralLibraries.kotlin
     implementation Dependencies.ProcessorLibraries.kotlinPoet
